<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp" >
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="4dp" >
            
            <ImageButton
                android:id="@+id/crime_imageButton"
                android:contentDescription="@string/add_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_camera" />
        </LinearLayout>
    
    	<LinearLayout
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:orientation="vertical"
    	    android:layout_weight="1" >
    	    
		    <TextView 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/crime_title_label"
		        style="?android:listSeparatorTextViewStyle" />
		    
		    <EditText
		        android:id="@+id/crime_title"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:hint="@string/crime_title_hint" />
		    
		    <TextView
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/crime_details_label"
		        style="?android:listSeparatorTextViewStyle" />
		    
		    <Button
		        android:id="@+id/crime_date"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="16dp"
		        android:layout_marginRight="16dp" />
		    
		     <Button
		        android:id="@+id/crime_time"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="16dp"
		        android:layout_marginRight="16dp" />
		     
		    <CheckBox
		        android:id="@+id/crime_solved"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="16dp"
		        android:layout_marginRight="16dp"
		        android:text="@string/crime_solved_label" />
    	</LinearLayout>
    </LinearLayout>
</LinearLayout>
